--- a/index-dev.html
+++ b/index-dev.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
-		<link rel="stylesheet" type="text/css" href="css/style-dev.css?v998"/>	
+		<link rel="stylesheet" type="text/css" href="css/style-dev.css?v997"/>	
 		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png"/>
@@ -22,6 +22,7 @@
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-regular-webfont.woff"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/notoserif-bold-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-bold-webfont.woff"/>
+		<!-- Taken from https://stackoverflow.com/a/28840664 -->
 		<script>(function(){if(window.localStorage){if(!localStorage.getItem('firstLoad')){localStorage['firstLoad']=true;window.location.reload()}else{localStorage.removeItem('firstLoad')}}})();</script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
