--- a/index-dev.html
+++ b/index-dev.html
@@ -29,7 +29,7 @@
 					if (!localStorage.getItem('firstLoad')) {
 						localStorage['firstLoad'] = true;
 						window.location.href = window.location.origin + window.location.pathname;
-						// window.location.reload();
+						window.location.reload();
 					} else 
 						localStorage.removeItem('firstLoad');
 					}
