--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-regular-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/notoserif-bold-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-bold-webfont.woff>
-<script>(function(){if(window.localStorage){if(!localStorage.getItem('firstLoad')){localStorage['firstLoad']=true;window.location.href=window.location.origin+window.location.pathname;}else{localStorage.removeItem('firstLoad')}}})();</script>
+<script>(function(){if(window.localStorage){if(!localStorage.getItem('firstLoad')){localStorage['firstLoad']=true;window.location.href=window.location.origin+window.location.pathname+window.location.hash;}else{localStorage.removeItem('firstLoad')}}})();</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-31768072-6")</script>
 </head>
