--- a/index-dev.html
+++ b/index-dev.html
@@ -28,7 +28,7 @@
 				if (window.localStorage) {
 					if (!localStorage.getItem('firstLoad')) {
 						localStorage['firstLoad'] = true;
-						window.location.href = window.location.origin + window.location.pathname;
+						window.location.href = window.location.origin + window.location.pathname + window.location.hash;
 						window.location.reload();
 					} else 
 						localStorage.removeItem('firstLoad');
