--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ William Gee, “Carving Scene,” c.1905
 </h3>
 </div>
 </div>
-<h2 id=coming-soon>Coming Soon (late January / early February)</h2>
+<h2 id=coming-soon>Coming Soon (circa March 2021)</h2>
 <p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
 <ul>
 <li><span>Suggested primary resources and study materials</span>
