--- a/index-dev.html
+++ b/index-dev.html
@@ -237,7 +237,7 @@
 						</div>
 					</div>
 
-					<h2 id="coming-soon">Coming Soon (late January / early February)</h2>
+					<h2 id="coming-soon">Coming Soon (circa March 2021)</h2>
 
 					<p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
 
