--- a/index-dev.html
+++ b/index-dev.html
@@ -342,14 +342,15 @@
 			/* Service Worker */
 			/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
 			if ("serviceWorker" in navigator) {
-			navigator.serviceWorker
-				.register("sw.js")
-				.then(serviceWorker => {
-				console.log("Service Worker registered: ", serviceWorker);
-				})
-				.catch(error => {
-				console.error("Error registering the Service Worker: ", error);
-				});
+				navigator.serviceWorker
+					.register("/sw.js?=newVers_0001")
+					.then(serviceWorker => {
+						serviceWorker.update();
+						console.log("Service Worker registered: ", serviceWorker);
+					})
+					.catch(error => {
+						console.error("Error registering the Service Worker: ", error);
+					});
 			}
 		</script>
 		<script>
