--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Undisciplining the Victorian Classroom | Home</title>
-		<meta name="description" content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens." />
+		<meta name="description" content="Introduces Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
@@ -17,12 +17,7 @@
 		<link rel="preload" as="style" href="css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
-		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/sourcesanspro-regular-webfont.woff2"/>
-		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/sourcesanspro-regular-webfont.woff"/>
-		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/notoserif-regular-webfont.woff2"/>
-		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-regular-webfont.woff"/>
-		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/notoserif-bold-webfont.woff2"/>
-		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-bold-webfont.woff"/>
+		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link rel="stylesheet" type="text/css" href="css/style.css?=newVers_0001"/>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
@@ -323,11 +318,12 @@
 			
 			<footer class="footer" id="footer-div">
 				<hr />
-				<p>&#169; 2020-2021, <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> | Hosted by <a href="https://github.com/undiscipliningvc">GitHub</a> | Design &amp; admin: <a href="mailto:awisnicki@yahoo.com">Adrian S. Wisnicki</a> | Contact: <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
+				<p>&#169; 2020-2021, <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> | Host: <a href="https://github.com/undiscipliningvc">GitHub</a> | CDN: <a href="https://www.cloudflare.com/">Cloudflare</a> | Design &amp; admin: <a href="mailto:awisnicki@yahoo.com">Adrian S. Wisnicki</a> | Contact: <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
 			</footer>
 
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
-		</div>			
+		</div>
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<script>
 			// Removes service worker
 			if ("serviceWorker" in navigator) {
