--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				<ol id="site-sections">
 					<li><a href="#organizers">Organizers</a></li>
 					<li><a href="#mission">Mission</a></li>
-					<li><a href="#upcoming">Coming Soon</a></li>
+					<!-- <li><a href="#upcoming">Coming Soon</a></li> -->
 					<li><a href="#call">Call for Syllabi</a></li>
 					<li><a href="#image-details">Image Details</a></li>
 					<li><a href="#site-code">Site Code</a></li>
@@ -209,8 +209,7 @@
 				
 				<hr class="section-divider"/>
 
-				<section aria-labelledby="coming-soon" id="upcoming">
-					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
+				<!-- <section aria-labelledby="coming-soon" id="upcoming">
 					<div class="image-wrapper">
 						<img class="image-border" loading="lazy" src="images/uvc_0005-deriv-1640px.jpg" srcset="images/uvc_0005-deriv-1640px.jpg 1640w, images/uvc_0005-deriv-1244px.jpg 1244w, images/uvc_0005-deriv-864px.jpg 864w, images/uvc_0005-deriv-622px.jpg 622w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-432px.jpg 432w, images/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
 						<div class="image-caption">
@@ -259,7 +258,7 @@
 					</ul>
 				</section>
 
-				<hr class="section-divider"/>
+				<hr class="section-divider"/>  -->
 				
 				<section aria-labelledby="syllabi" id="call">
 					<div class="image-wrapper">
@@ -300,8 +299,8 @@
 
 						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 
-						<h4>Coming Soon</h4>
-						<p id="gee">Gee, William. “<a href="https://collections.tepapa.govt.nz/object/417717">Carving Scene</a>.” Tōtara wood. Wellington, New Zealand, c.1905. Te Papa (GH007416). Museum of New Zealand | Te Papa Tongarewa. Gift of Mrs G. M. Williams, 1965. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p>
+						<!-- <h4>Coming Soon</h4>
+						<p id="gee">Gee, William. “<a href="https://collections.tepapa.govt.nz/object/417717">Carving Scene</a>.” Tōtara wood. Wellington, New Zealand, c.1905. Te Papa (GH007416). Museum of New Zealand | Te Papa Tongarewa. Gift of Mrs G. M. Williams, 1965. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p> -->
 
 						<h4>Call for Syllabi</h4>
 						<p id="dance">Anonymous Tlingit Artist. “<a href="https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs">Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. 1961.568. Art Institute of Chicago. Kate S. Buckingham Endowment. <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>.</p>
