--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 			<nav class="navigation">
 				<div class="nav-wrapper">
 
-					<a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a>
-
 					<ul id="nav2" role="menubar" aria-label="Site sections">
+						<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
+
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span>Home</span></a></li>
 
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span>Zoomcasts</span></a></li>
@@ -54,9 +54,9 @@
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><span>FAQ</span></a></li>
 
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span>About</span></a></li>
-					</ul>
 
-					<a id="nav2a" style="cursor:pointer" aria-label="Show site sections" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a>
+						<li role="none"><a id="nav2a" style="cursor:pointer" aria-label="Show site sections" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></li>
+					</ul>
 
 				</div>
 			</nav>
