--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link rel="stylesheet" type="text/css" href="css/style.css?=newVers_0001"/>
-		<link rel="stylesheet" type="text/css" href="css/nav.css?=newVers_0001"/>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
 	</head>
@@ -38,27 +37,23 @@
 			</nav>
 
 			<nav class="navigation">
-				<div class="nav-wrapper">
+				<ul id="nav2" role="menubar" aria-label="Site sections">
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 
-					<ul id="nav2" role="menubar" aria-label="Site sections">
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span>Home</span></a></li>
 
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span>Home</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span>Zoomcasts</span></a></li>
 
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span>Zoomcasts</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="lesson_plans.html"><span>Lesson Plans</span></a></li>
 
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="lesson_plans.html"><span>Lesson Plans</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="syllabi.html"><span>Syllabi</span></a></li>
 
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="syllabi.html"><span>Syllabi</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><span>FAQ</span></a></li>
 
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><span>FAQ</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span>About</span></a></li>
 
-						<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span>About</span></a></li>
-
-						<li role="none"><a id="nav2a" style="cursor:pointer" aria-label="Show site sections" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></li>
-					</ul>
-
-				</div>
+					<li role="none"><a id="nav2a" style="cursor:pointer" aria-label="Show site sections" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></li>
+				</ul>
 			</nav>
 
 			<header>
@@ -399,7 +394,7 @@
 				document.getElementById("nav3").style.visibility = "hidden";
 				document.getElementsByTagName("html")[0].style.overflowY = "unset";
 			}
-</script>			
+</script???>			
 		<script src="scripts/carousel.js"></script>
 		<script src="scripts/carouselItem.js"></script>
 		<script src="scripts/carouselButtons.js"></script>
