--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
+		<link rel="preload" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css?=newVers_0001"/>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
@@ -32,11 +33,11 @@
 		<div class="text-container">
 
 			<!-- nav1 adapted from https://webaim.org/techniques/skipnav/ -->
-			<nav id="skiptocontent" aria-labelledby="nav0">
-				<a href="#main" id="nav0" tabindex="0">skip to main content</a>
+			<nav id="skiptocontent" nav="nav0">
+				<a href="#main" tabindex="0">skip to main content</a>
 			</nav>
 
-			<nav class="navigation" id="nav1">
+			<nav id="nav1">
 				<ul id="nav2" role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 
@@ -208,7 +209,7 @@
 			
 			<hr class="section-divider"/> -->
 
-			<main class="main" id="main">
+			<main id="main">
 				<section class="organizers" aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
 					<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
@@ -228,7 +229,7 @@
 					<p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need.  Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 				</section>
 				
-				<hr class="section-divider"/>
+				<!-- <hr class="section-divider"/> -->
 
 				<!-- <section aria-labelledby="coming-soon" id="upcoming">
 					<div class="image-wrapper">
@@ -294,7 +295,7 @@
 					</div>
 
 					<h2 id="syllabi">Call for Syllabi (CFS)</h2>
-					<p style="padding-top:.5em; text-align: center;"><strong>Deadline:</strong> Accepted on a rolling basis</p>
+					<p class="center small"><strong>Deadline:</strong> Accepted on a rolling basis</p>
 					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds and 2) introduce less-studied, global, Victorian-era writers, artists and communities into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
 					<p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of <em>Undisciplining the Victorian Classroom.</em> This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
@@ -345,6 +346,7 @@
 		</div>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
 			// Removes service worker
 			if ("serviceWorker" in navigator) {
@@ -354,6 +356,19 @@
 						}
 					})
 			}
+		</script>
+		<script>
+			$(window).scroll(function () {
+					var $heightScrolled = $(window).scrollTop();
+					var $defaultHeight = 400;
+					if ($heightScrolled < $defaultHeight) {
+							$('#nav1').removeClass("borderBottom")
+							// $('#nav2').addClass("a")
+					}
+					else {
+							$('#nav1').addClass("borderBottom")
+					}
+			});		
 		</script>
 		<script>
 			//Scroll to top button
@@ -395,7 +410,7 @@
 				document.getElementById("nav3").style.visibility = "hidden";
 				document.getElementsByTagName("html")[0].style.overflowY = "unset";
 			}
-</script>			
+		</script>
 		<script src="scripts/carousel.js"></script>
 		<script src="scripts/carouselItem.js"></script>
 		<script src="scripts/carouselButtons.js"></script>
