--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span>About</span></a></li>
 
-					<li role="none"><a id="nav2a" style="cursor:pointer" aria-label="Show site sections" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></li>
+					<li role="none"><a style="cursor:pointer" aria-label="Show site sections" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></li>
 				</ul>
 			</nav>
 
@@ -307,9 +307,9 @@
 					<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
 				</section>
 
-				<hr class="section-divider"/>
+				<hr />
 			
-				<section aria-labelledby="image-details" class="smaller details">
+				<section aria-labelledby="image-details" class="small details">
 					<h3 id="image-details">Image Details</h3>
 
 						<h4>Slideshow</h4>
@@ -328,9 +328,9 @@
 						<p id="dance">Anonymous Tlingit Artist. “<a href="https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs">Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. 1961.568. Art Institute of Chicago. Kate S. Buckingham Endowment. <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>.</p>
 				</section>
 			
-				<hr class="section-divider"/>
+				<hr />
 
-				<section aria-labelledby="site-code" class="smaller">
+				<section aria-labelledby="site-code" class="small">
 					<h3 id="site-code">Site Code</h3>
 					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences.</p>
 				</section>
