--- a/index.html
+++ b/index.html
@@ -383,9 +383,11 @@
 			function scrollFunction() {
 				if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
 					mybutton.style.display = "block";
+					mybutton.style.visibility = "visible";
 				} 
 				else {
 					mybutton.style.display = "none";
+					mybutton.style.visibility = "hidden";
 				}
 			}
 			
