--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span>Home</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span><i class="fa fa-home"></i> Home</span></a></li>
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span>Zoomcasts</span></a></li>
 
@@ -406,22 +406,22 @@
 			}
 		</script>
 		<script>
-// Overlay
-// Adapted from https://www.w3schools.com/howto/howto_js_fullscreen_overlay.asp
+			// Overlay
+			// Adapted from https://www.w3schools.com/howto/howto_js_fullscreen_overlay.asp
 
-function openNav() {
-	document.getElementById("nav3").style.width = "40%";
-	document.getElementById("nav3").style.display = "block";
-	document.getElementById("nav3").style.visibility = "visible";
-	document.getElementsByTagName("html")[0].style.overflowY = "hidden";
-}
+			// function openNav() {
+			// 	document.getElementById("nav3").style.width = "40%";
+			// 	document.getElementById("nav3").style.display = "block";
+			// 	document.getElementById("nav3").style.visibility = "visible";
+			// 	document.getElementsByTagName("html")[0].style.overflowY = "hidden";
+			// }
 
-function closeNav() {
-	document.getElementById("nav3").style.width = "0%";
-	document.getElementById("nav3").style.display = "none";
-	document.getElementById("nav3").style.visibility = "hidden";
-	document.getElementsByTagName("html")[0].style.overflowY = "unset";
-}
+			// function closeNav() {
+			// 	document.getElementById("nav3").style.width = "0%";
+			// 	document.getElementById("nav3").style.display = "none";
+			// 	document.getElementById("nav3").style.visibility = "hidden";
+			// 	document.getElementsByTagName("html")[0].style.overflowY = "unset";
+			// }
 		</script>
 		<script src="scripts/carousel.js"></script>
 		<script src="scripts/carouselItem.js"></script>
