--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 				</ul>
 			</nav>
 
-			<nav class="overlay" id="nav3">
+			<!-- <nav class="overlay" id="nav3">
 				<ul role="menubar" aria-label="Close button">
 					<li role="none"><a class="close" aria-label="Close site sections" aria-pressed="false" onclick="closeNav()" title="Close" href="javascript:void(0)">&#215;</a></li>
 				</ul>
 				<section class="overlay-content" role="menu">
 				</section>
-			</nav>
+			</nav> -->
 
 			<header>
 				<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
