--- a/index.html
+++ b/index.html
@@ -430,22 +430,22 @@
 			// Adapted from https://blog.avada.io/css/sidebar-menus/#animated-sidebar-menu-ephraim-sangma
 			function openSlideMenu () {
 				// document.getElementsByTagName("html")[0].style.overflowY = "hidden";
-				document.getElementById('nav2').style.marginRight = '250px';
-				document.getElementById('sidebar-menu').style.width = '250px';
-				document.getElementById('nav1').style.visibility = 'hidden';
-				document.getElementsByTagName('header').style.visibility = 'hidden';
-				document.getElementsByTagName('main').style.visibility = 'hidden';
-				document.getElementsByTagName('footer').style.visibility = 'hidden';
+				document.getElementById('nav2').style.marginRight = '180px';
+				document.getElementById('sidebar-menu').style.width = '180px';
+				// document.getElementById('nav1').style.visibility = 'hidden';
+				// document.getElementsByTagName('header').style.visibility = 'hidden';
+				// document.getElementsByTagName('main').style.visibility = 'hidden';
+				// document.getElementsByTagName('footer').style.visibility = 'hidden';
 			}
 
 			function closeSlideMenu () {
 				// document.getElementsByTagName("html")[0].style.overflowY = "unset";
 				document.getElementById('nav2').style.marginRight = '0';
 				document.getElementById('sidebar-menu').style.width = '0';
-				document.getElementById('nav1').style.visibility = 'visible';
-				document.getElementsByTagName('header').style.visibility = 'visible';
-				document.getElementsByTagName('main').style.visibility = 'visible';
-				document.getElementsByTagName('footer').style.visibility = 'visible';
+				// document.getElementById('nav1').style.visibility = 'visible';
+				// document.getElementsByTagName('header').style.visibility = 'visible';
+				// document.getElementsByTagName('main').style.visibility = 'visible';
+				// document.getElementsByTagName('footer').style.visibility = 'visible';
 			}			
 		</script>
 		<script src="scripts/carousel.js"></script>
