--- a/index.html
+++ b/index.html
@@ -429,9 +429,8 @@
 			// Overlay
 			// Adapted from https://blog.avada.io/css/sidebar-menus/#animated-sidebar-menu-ephraim-sangma
 			function openSlideMenu () {
-				// document.getElementsByTagName("html")[0].style.overflowY = "hidden";
 				document.getElementsByTagName("html")[0].style.background = "#666666";
-				document.getElementById('nav2').style.marginRight = '180px';
+				document.getElementById("nav2").setAttribute("style", "margin-right: 180px; display: block; visibility: visible;");
 				document.getElementById('overlay-menu').style.width = '180px';
 				const elements = ["nav0", "nav1", "header", "main", "footer"];
 				for(const element of elements){
@@ -444,9 +443,8 @@
 			}
 
 			function closeSlideMenu () {
-				// document.getElementsByTagName("html")[0].style.overflowY = "unset";
 				document.getElementsByTagName("html")[0].style.background = "#fff";
-				document.getElementById('nav2').style.marginRight = '0';
+				document.getElementById("nav2").setAttribute("style", "margin-right: 0; display: none; visibility: hidden;");
 				document.getElementById('overlay-menu').style.width = '0';
 				const elements = ["nav0", "nav1", "header", "main", "footer"];
 				for(const element of elements){
